[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webcompat-results"
description = "Store wpt results in Git"
authors = [
  {name = "Mozilla Corporation"}
]
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "httpx==0.28.1",
    "orjson>=3.11.3",
    "pygit2==1.18.2",
    "tcfetch==0.5.1",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
test = [
  "mypy==1.18.2",
]

[project.scripts]
wpt-store-results = "wpt_results:store.main"

[tool.mypy]
disallow_untyped_defs = true

[tool.setuptools]
packages = ["wpt_results"]

[tool.pytest]
testpaths = ["tests"]
